# wordgame-bot

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.rst  pyproject.toml
.circleci/: config.yml
tests/: bot_test.py  conftest.py  db_test.py  embed_test.py  leaderboard_test.py  league_test.py  octordle_test.py  quordle_test.py  test_bot.py  test_embed.py  test_leaderboard.py  test_league.py  test_octordle.py  test_quordle.py  test_wordgame_bot.py  test_wordle.py  wordle_test.py
tests/test_results/: result.xml
wordgame_bot/: .env  attempt.py  bot.py  db.py  embed.py  exceptions.py  guess.py  heardle.py  leaderboard.py  league.py  octordle.py  pyproject.toml  quordle.py  requirements.txt  wordle.py
