[tool.poetry]
name = "wordgame-bot"
version = "0.1.0"
description = ""
authors = ["Harry Williams <1998.harrywilliams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
freezegun = "^1.1.0"
discord = "^1.7.3"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "7.1.0"
pytest-asyncio = "^0.18.2"
python-dotenv = "0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
junit_family = "xunit2"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["wordgame_bot"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line_length = 79
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
