[tool.poetry]
name = "wordgame-bot"
version = "0.1.0"
description = "A bot for parsing and scoring wordle/quordle games"
authors = ["Harry Williams <1998.harrywilliams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
